--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@types/react-router-dom": "5.3.3",
+    "graphql": "16.5.0",
+    "graphql-request": "4.3.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-router-dom": "6.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "swr": "1.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
